--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,12 @@
 
 
     <Button
-        android:id="@+id/Add"
+        android:id="@+id/addBtn1"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginTop="30dp"
         android:text="Add 1 track"
-        android:onClick="addBtn1"/>
+        android:onClick="addBtn1Click"/>
 
     <ImageView
         android:layout_width="100dp"
@@ -66,12 +66,12 @@
         android:max="10"
         android:progress="2"/>
     <Button
-        android:id="@+id/Add1"
+        android:id="@+id/addBtn2"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginTop="50dp"
         android:text="Add 2 track"
-        android:onClick="addBtn2"/>
+        android:onClick="addBtn2Click"/>
 
     <ImageView
         android:layout_width="100dp"
