--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="You can change Crossfade size, when the ONE of the songs is playing!" />
+        android:text="Please change Crossfade size, when the ONE of the songs is playing!" />
 
     <TextView
         android:layout_width="300dp"
@@ -55,7 +55,6 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:onClick="addBtn1Click"
         android:text="NEXT" />
 
 </LinearLayout>
